--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
       <h3>project-folder-name</h3>
       <ul>
-        <li class="foldable">
+        <li class="folder">
           <details>
             <summary>public</summary>
 
             <ul>
-              <li class="foldable">
+              <li class="folder">
                 <details>
                   <summary>CSS</summary>
 
@@ -36,6 +36,29 @@
                     <li>fonts.css</li>
                     <li>reset.css</li>
                     <li>style.css</li>
+
+                    <li class="folder">
+                      <details>
+                        <summary>public</summary>
+
+                        <ul>
+                          <li class="folder">
+                            <details>
+                              <summary>CSS</summary>
+
+                              <ul>
+                                <li>fonts.css</li>
+                                <li>reset.css</li>
+                                <li>style.css</li>
+                              </ul>
+                            </details>
+                          </li>
+                          <li>index.html</li>
+                          <li>script.js</li>
+                        </ul>
+                      </details>
+                    </li>
+
                   </ul>
                 </details>
               </li>
