show folder structure

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       <h2>Project structure</h2>
       <h3 id="projectFolderName">project-folder-name</h3>
 
-      <ul>
+      <ul id="structureList">
         <li class="folder">
           <details>
             <summary>public</summary>
